# pipelines-main

pipelines-main/: Dockerfile  docker-compose.yml  pyproject.toml
pipelines-main/db/: Dockerfile
pipelines-main/example_pipeline/: norm.csv  pipeline.py
pipelines-main/pipelines/: tasks.py
